# ML_Computer_Vision_Project_EAST

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  black.toml  docker-compose-debug.yml  docker-compose.yml  pyproject.toml  pyvenv.cfg  readme.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflow/: testPush.yml
.github/workflows/: python-package.yml  testPR.yml  testPush.yml
src/EAST/: east_text_detection.py  east_text_detection_main.py
streamlit/: app.py
test/: test.py
