
[metadata]
license_files = LICENSE

[options.data_files]
. = requirements.txt
    readme.md

[options.extras_require]
testing =
    black
    isort
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 100
exclude =.git,__pycache__,build,dist,asset
ignore = I101,I201,F401,F403,S001,D100,D101,D102,D103,D104,D105,D106,D107,D200,D205,D400,W504,D202,E203,W503,B006
inline-quotes = "

[mypy]

ignore_missing_imports = True